# hdc-py

./: hdc.py  pyproject.toml
.github/workflows/: quality.yml
src/hdc_py/: hdc.py
