[project]
name = "hdc-py"
version = "0.1.0"
description = "A python wrapper around the (Open-) Harmony device connector"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    # Type Annotation
    "ANN",
]


[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
